--- a/Lego/index.html
+++ b/Lego/index.html
@@ -10,7 +10,33 @@
     <div id="container">
         <header>
             <img id="logo" src="website_images/LD_logo.svg" alt="LEGOdudes nettbutikk">
-            <img id="carticon" src="website_images/legocart.svg" alt="Din Handlevogn">
+            <button>
+                <span>99</span>
+                <img id="carticon" src="website_images/legocart.svg" alt="Din Handlevogn">
+            </button>
+            <section id="cart">
+                <h2>Din Handlevogn</h2>
+                <ul>
+                    <li>
+                        <span class="title">Produkttitel</span>
+                        <span class="price">89,-</span>
+                        <span class="quantity">x1</span>
+                        <span class="functions">
+                            <button>X</button>
+                        </span>
+                    </li>
+                    <li>
+                        <span class="title">Wengestone warrioirs</span>
+                        <span class="price">9989,-</span>
+                        <span class="quantity">x333</span>
+                        <span class="functions">
+                            <button>X</button>
+                        </span>
+                    </li>
+                </ul>
+                
+                
+            </section>
         </header>
         <nav>
             <ul>
@@ -21,11 +47,15 @@
                 <li><a href="#">Movie Characters</a></li>
             </ul>
         </nav>
+        <main>
+
+        </main>
+
 
     </div>
 
 
-
+    <script src="legodudes.js"></script>
     <script src="shopscript.js"></script>
 </body>
 </html>
